--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 locale                   : "en-US"
 title                    : "Arkaprabha Sanyal"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Arkaprabha Sanyal"
 description              : &description "personal description"
-url                      :  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://arkaprabha-sanyal.github.io/arkaprabhasanyal.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/ARKAPRABHA-SANYAL/arkaprabhasanyal.github.io"
+repository               : "ARKAPRABHA-SANYAL/arkaprabhasanyal.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Arkaprabha Sanyal"
   avatar           : "profile.png"
-  bio              : "4th year EE undergrad""Jadavpur university"
+  bio              : "4th year EE undergrad \nJadavpur university"
   location         : 
   employer         :
   pubmed           : 
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         :
+  linkedin         : "arkaprabha-sanyal"
   orcid            : 
   pinterest        :
   soundcloud       :
