--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,8 @@ analytics:
 author:
   name             : "Arkaprabha Sanyal"
   avatar           : "profile.png"
-  bio              : "4th year EE undergrad \nJadavpur university"
+  bio              : "4th year EE undergrad" 
+  "Jadavpur university"
   location         : 
   employer         :
   pubmed           : 
