--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,10 @@ analytics:
 author:
   name             : "Arkaprabha Sanyal"
   avatar           : "profile.png"
-  bio              : "4th year EE undergrad" 
-  "Jadavpur university"
+  bio: >
+  4th year EE undergrad
+  Jadavpur University
+
   location         : 
   employer         :
   pubmed           : 
