--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Arkaprabha Sanyal"
-  avatar           : "profile.png"
+  avatar           : "WhatsApp Image 2023-08-13 at 14.25.39.png"
   bio              : "4th year EE undergrad<br>Jadavpur University"
   location         : 
   employer         :
